# lnreader

./: AGENTS.md  AI_FEATURE_PROGRESS.md  tsconfig.tsbuildinfo
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/css/: index.css
android/app/src/main/assets/js/: core.js  index.js
backend/: ..env.swp  .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  ids.py  main.py  openrouter.py  retrieval.py  schemas.py
drizzle/: migrations.js
drizzle/20260318120000_neat_mistral/: migration.sql
src/database/: db.ts
src/database/queries/: AiQueries.ts  BookmarkQueries.ts
src/database/schema/: aiChunk.ts  aiNovel.ts  index.ts
src/database/tables/: BookmarkTable.ts
src/database/types/: index.ts
src/hooks/persisted/: index.ts  useAi.ts  useSettings.ts
src/navigators/: MoreStack.tsx  ReaderStack.tsx
src/navigators/types/: index.ts
src/screens/bookmarks/: BookmarksScreen.tsx
src/screens/novel/: NovelScreen.tsx
src/screens/novel/components/: NovelAppbar.tsx
src/screens/reader/: ReaderScreen.tsx
src/screens/reader/components/: AskAiModal.tsx  ReaderAppbar.tsx  WebViewReader.tsx
src/screens/reader/hooks/: useChapter.ts
src/screens/settings/: SettingsAIScreen.tsx  SettingsScreen.tsx
src/services/: ServiceManager.ts
src/services/ai/: askQuestion.ts  backend.ts  extractChunks.ts  indexNovel.ts  types.ts
strings/languages/en/: strings.json
strings/types/: index.ts
